apps/leuchtturm-io/vaultwarden/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vaultwarden
  namespace: leuchtturm-io
  labels:
    app.kubernetes.io/name: vaultwarden
    app.kubernetes.io/part-of: vaultwarden
    app.kubernetes.io/component: server
    app.kubernetes.io/version: 1.24.0
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: vaultwarden
      app.kubernetes.io/part-of: vaultwarden
  template:
    metadata:
      annotations:
        vault.security.banzaicloud.io/vault-addr: http://vault.infrastructure.svc.cluster.local:8200
        vault.security.banzaicloud.io/vault-role: vaultwarden
        diun.enable: "true"
        diun.regopt: docker.io
        diun.watch_repo: "true"
        diun.include_tags: "^\\d+\\.\\d+\\.\\d+$"
      labels:
        app.kubernetes.io/name: vaultwarden
        app.kubernetes.io/part-of: vaultwarden
        app.kubernetes.io/component: server
        app.kubernetes.io/version: 1.24.0
    spec:
      serviceAccountName: vaultwarden
      securityContext:
        fsGroup: 1001
      containers:
        - name: vaultwarden
          image: vaultwarden/server:1.24.0
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              cpu: 8m
              memory: 64Mi
            limits:
              cpu: 64m
              memory: 128Mi
  volumeClaimTemplates:
    - metadata:
        name: data
        namespace: leuchtturm-io
        labels:
          app.kubernetes.io/name: vaultwarden
          app.kubernetes.io/part-of: vaultwarden
          app.kubernetes.io/component: server
      spec:
        storageClassName: scw-bssd-retain
        accessModes:
          - ReadWriteOnce
        volumeMode: Filesystem
        resources:
          requests:
            storage: 1Gi
